# docs/swagger.json
@@ -18,6 +18,49 @@
     "host": "aliyun.eagle711.win:8081",
     "basePath": "/",
     "paths": {
+        "/claim": {
+            "post": {
+                "description": "理赔申请",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "理赔申请"
+                ],
+                "summary": "理赔申请",
+                "parameters": [
+                    {
+                        "description": "COMMENT",
+                        "name": "claim",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/types.Claim"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "COMMENT",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/types.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "COMMENT",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/types.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/location": {
             "get": {
                 "description": "返回全国省市列表",
@@ -89,6 +132,14 @@
         }
     },
     "definitions": {
+        "types.Claim": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
         "types.Response": {
             "type": "object",
             "properties": {
